<resources>
    <string name="app_name">job</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_likedjobs">Liked Jobs</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="login">Login</string>
    <string name="que">Have an Account ?</string>
    <string name="sign">Sign in</string>
    <string name="create">Create Account</string>
    <string name="uname">  Username</string>
    <string name="pass">  Password</string>
    <string name="name">  Enter your name</string>
    <string name="id">  Email id</string>
    <string name="pass1">  Set Password</string>
    <string name="pass2">  Confirm Password</string>
    <string name="mob">  Mobile no.</string>
    <string name="dob">  DOB</string>
    <string name="loc">  Location</string>
    <string name="req">  Requirement</string>

</resources>
