<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style1"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            style="@style/style2"
            android:background="@android:drawable/screen_background_light_transparent">
            <TextView
                style="@style/style2"
                android:text="@string/create"
                android:textSize="32sp"
                android:textColor="@color/red1"/>
            <EditText
                android:id="@+id/name1"
                android:drawableLeft="@drawable/person"
                style="@style/style3"
                android:hint="@string/uname"/>
            <EditText
                android:id="@+id/email1"
                android:drawableLeft="@drawable/email"
                style="@style/style3"
                android:hint="@string/id"/>
            <EditText
                android:id="@+id/mob1"
                android:drawableLeft="@drawable/phone"
                style="@style/style3"
                android:hint="@string/mob"
                android:inputType="number"/>
            <EditText
                android:id="@+id/dob1"
                android:drawableLeft="@drawable/cake"
                style="@style/style3"
                android:hint="@string/dob" />
            <EditText
                android:id="@+id/pass1"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                style="@style/style3"
                android:hint="@string/pass1"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/pass21"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                style="@style/style3"
                android:hint="@string/pass2"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/btn"
                android:layout_height="40dp"
                android:layout_width="220dp"
                android:background="@color/blue2"
                android:text="@string/create"
                android:textSize="20sp"
                android:textColor="#fff"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>