<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style1"
    tools:context=".Login">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            style="@style/style2"
            android:background="@android:drawable/screen_background_light_transparent">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_person_black_24dp"/>
            <EditText
                android:id="@+id/ed3"
                style="@style/style3"
                android:drawableLeft="@drawable/person"
                android:hint= "@string/uname"
                android:textSize="25sp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/ed4"
                style="@style/style3"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/pass"
                android:textSize="25sp"
                android:inputType="textPassword"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnlogin"
                    android:onClick="login"
                    android:layout_marginRight="2dp"
                    android:layout_height="40dp"
                    android:layout_width="155dp"
                    android:text="@string/sign"
                    android:textSize="16sp"
                    android:background="@color/red1"
                    android:textColor="#fff"/>
                <Button
                    android:onClick="create"
                    android:layout_height="40dp"
                    android:layout_width="155dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/create"
                    android:textSize="16sp"
                    android:background="@color/blue2"
                    android:textColor="#fff"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>