<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Navigation"
    tools:showIn="@layout/app_bar_navigation"

    android:background="@color/colorPrimaryDark"
    android:id="@+id/main"
    android:orientation="vertical"
    style="">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ViewFlipper
                    android:id="@+id/v_flipper"
                    android:layout_width="match_parent"
                    android:layout_height="218dp"
                    android:layout_gravity="top"
                    android:layout_marginBottom="50dp" />
                <TextView
                    android:layout_height="50dp"
                    android:layout_width="wrap_content"
                    android:text="@string/que"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:layout_marginTop="90dp"
                    android:typeface="monospace"/>

                <Button
                    style="@style/btndesign"
                    android:background="@color/red1"
                    android:onClick="sign"
                    android:text="@string/sign"
                    android:textColor="#FDFDFD"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <View
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="@color/grey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OR"
                        android:textColor="@color/grey"/>
                    <View
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="@color/grey"/>
                </LinearLayout>

                <Button
                    style="@style/btndesign"
                    android:background="@color/blue2"
                    android:onClick="create"
                    android:text="@string/create"
                    android:textColor="#FDFDFD"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:onClick="w_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="continue without signing in"
                    android:textColor="#000"
                    android:foregroundTint="#C7CBCC"
                    android:background="@color/cardview_shadow_end_color"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>

    <!--        <LinearLayout
                    android:id="@+id/search"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SEARCH JOB's"
                    android:gravity="center"
                    android:textSize="50dp"
                    android:textColor="@color/colorAccent"/>
                <LinearLayout
                    style="@style/style2"
                    android:background="@android:drawable/screen_background_light_transparent">
                    <EditText
                        android:id="@+id/ed1"
                        style="@style/style3"
                        android:hint="@string/loc"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/ed2"
                        style="@style/style3"
                        android:textSize="20sp"
                        android:hint="@string/req" />
                    <Button
                        android:background="@drawable/btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="search"/>
                </LinearLayout>
            </LinearLayout>

    <LinearLayout
                android:id="@+id/l1"
                style="@style/style1"
                android:visibility="gone">
                <LinearLayout
                    style="@style/style2"
                    android:background="@android:drawable/screen_background_light_transparent">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/ic_person_black_24dp"/>
                    <EditText
                        android:id="@+id/ed3"
                        style="@style/style3"
                        android:hint="@string/uname"
                        android:textSize="25sp"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/ed4"
                        style="@style/style3"
                        android:hint="@string/pass"
                        android:textSize="25sp"
                        android:inputType="textPassword"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnlogin"
                            android:onClick="login"
                            style="@style/style4"
                            android:text="@string/sign"
                            android:textSize="16sp" />
                        <Button
                            android:onClick="create"
                            style="@style/style4"
                            android:text="@string/create"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            <LinearLayout
                style="@style/style1">
                <LinearLayout
                    style="@style/style2"
                    android:background="@android:drawable/screen_background_light_transparent">
                    <TextView
                        style="@style/style2"
                        android:text="@string/create"
                        android:textSize="35sp"/>
                    <EditText
                        android:id="@+id/name"
                        style="@style/style3"
                        android:hint="@string/uname"/>
                    <EditText
                        android:id="@+id/email"
                        style="@style/style3"
                        android:hint="@string/id"/>
                    <EditText
                        android:id="@+id/mob"
                        style="@style/style3"
                        android:hint="@string/mob"/>
                    <EditText
                        android:id="@+id/dob"
                        style="@style/style3"
                        android:hint="@string/dob"/>
                    <EditText
                        android:id="@+id/pass"
                        style="@style/style3"
                        android:hint="@string/pass1"/>
                    <EditText
                        android:id="@+id/pass2"
                        style="@style/style3"
                        android:hint="@string/pass2"/>
                    <Button
                        android:id="@+id/button"
                        style="@style/style4"
                        android:text="@string/create"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>-->